--- a/index.css
+++ b/index.css
@@ -1,239 +1,112 @@
-body {
+*{
    margin: 0;
-   --background-color: #232634;
-   --background-color-dark: #1e202e;
-   --main-font: 'Chivo Mono', monospace;
+   padding: 0;
 }
 
-::selection {
-   background-color: #33f456;
-   color: #232634;
+body {
+   background: rgb(80,9,121);
+   background: linear-gradient(90deg, rgba(80,9,121,1) 0%, rgba(122,33,154,1) 50%, rgba(196,0,255,1) 100%);
 }
 
-.top {
-   top: 0;
-   width: 100%;
-   height: 5vw;
-   position: sticky;
-   display: flex;
-   align-items: center;
-   justify-content: space-between;
-   background-color: var(--background-color-dark);
-   border-bottom: #28303b 1px solid;
-}
-
-.top-left{
-   display: flex;
-   align-items: center;
-   margin-left: 1vw;
-}
-
-.top-right{
-   display: flex;
-   align-items: center;
-   margin-right: 1vw;
-   
-}
-
-.presentation {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   background-color: var(--background-color);
- }
- 
- .top_content {
-   text-align: center;
-   margin-bottom: 1rem;
-   font-family: 'Chivo Mono', monospace;
- }
- 
- .bottom_content {
-   display: flex;
-   align-items: center;
-   justify-content: space-around;
-   margin-bottom: 1rem;
-   margin-top: 1rem;
- }
-
-.languages {
-   display: flex;
-   align-items: center;
-   flex-direction: column;
-   background-color: var(--background-color);
-   height : 50vh;
- }
-
-.projects {
-   display: flex;
-   align-items: center;
-   flex-direction: column;
-   background-color: var(--background-color);
-}
-
-
-
-
-.project {
-   display: flex;
-   align-items: center;
-   flex-direction: column;
-   background-color: #1e202e;
-   border: #1e202e 1px solid;
-   border-radius: 10px;
-   margin: 1vw;
-   width: 20vw;
-   height: 30vw;
-   overflow-y: auto;
-   -webkit-border-radius: 10px;
-   -moz-border-radius: 10px;
-   -ms-border-radius: 10px;
-   -o-border-radius: 10px;
-}
-
- .project h3{
-   color : #33f456;
-   text-align: center;
- }
-
-.project p{
-   font-family: 'Chivo Mono', monospace;
-   font-size: 1vw;
-   margin: 0 1vw;
-   color: white;
-}
-
-/* cut the image if it's too big */
-
-.project img{
-   aspect-ratio: 16/9;
-   width: 20vw;
-   border-radius: 10px;
-   -webkit-border-radius: 10px;
-   -moz-border-radius: 10px;
-   -ms-border-radius: 10px;
-   -o-border-radius: 10px;
-   object-fit: cover;
-}
-
-
-
-
-#display-name{
-   font-size: 1.5vw;
-   margin: 0 1vw;
-   color: #33f456;
-   font-family: 'Chivo Mono', monospace;
-}
-
-#contact-link{
-   font-size: 1.5vw;
-   margin: 0 1vw;
-   color: #f943d2;
-   font-family: 'Chivo Mono', monospace;
+a {
    text-decoration: none;
-   margin: 0 1vw;
 }
 
-#user-icon{
-   width: 12vw;
-   height: 12vw;
-   border-radius: 50%;
-   margin: 0 1vw;
-   border: white 5px solid;
+/* width */
+::-webkit-scrollbar {
+   width: 10px;
 }
-
-
-
-
-a{
-   color: white;
+::-webkit-scrollbar-track {
+   background: #000;
 }
-
-h2{
-   font-size: 2vw;
-   margin: 0 1vw;
-}
-
-h1{
-   font-size: 2.5vw;
-   margin: 1vw;
-   color: white;
-}
-
-h3 {
-   font-size: 1.5vw;
-   margin: 1vw;
-   color: white;
-   font-family: var(--main-font);
-}
-
-code {
-   background-color: #2d2d2d;
-   font-family: Consolas, monospace;
-   font-size: 14px;
-   padding: 5px;
-   color: #f5f5f5;
-   display: block;
-   white-space: pre-wrap;
-   overflow-x: auto;
-   max-width: 42vw;
+::-webkit-scrollbar-thumb {
+   background: #9932CC;
    border-radius: 5px;
-   margin-left: 2vw;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    -ms-border-radius: 5px;
    -o-border-radius: 5px;
 }
-
-/* if its a mobile device, place the picture above the code section */
-/* if its ratio is 9:16, place the picture above the code section */
-@media screen and (max-width: 800px){
-   .bottom_content {
-      flex-direction: column;
-   }
-
-   .line{
-      flex-direction: row;
-      justify-content: space-around;
-   }
-
-   .top_content {
-      margin-bottom: 0;
-   }
-
-   #user-icon{
-      width: 30vw;
-      height: 30vw;
-   }
-
-   code {
-      max-width: 90vw;
-      margin-left: 0;
-   }
-
-   .top {
-      height: 10vw;
-   }
-
-   h1 {
-      font-size: 5vw;
-   }
-
-   h3 {
-      font-size: 3vw;
-   }
-
-   #display-name{
-      font-size: 4vw;
-   }
-
-   #contact-link{
-      font-size: 4vw;
-   }
-
-   .project{
-      max-width: 50vw;
-   }
+::-webkit-scrollbar-thumb:hover {
+   background: #AA43DD;
 }
-   
+
+
+.title {
+   width:100%;
+   min-height: 80vh;
+   aspect-ratio: 2/1;
+   background: #000;
+   position: relative;
+   border-radius: 0 0 5px 5px;
+   -webkit-border-radius: 0 0 5px 5px;
+   -moz-border-radius: 0 0 5px 5px;
+   -ms-border-radius: 0 0 5px 5px;
+   -o-border-radius: 0 0 5px 5px;
+}
+.title-background {
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+   filter: blur(7px) brightness(30%);
+   -webkit-filter: blur(7px) brightness(30%);
+}
+.title-content{
+   font-family: 'Martian Mono', monospace;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   text-align: center;
+}
+.title-content h1{  
+   font-size: 2.5rem;
+   color: #fff;
+}
+.title-content p{
+   font-size: 1.5rem;
+   color: #fff;
+}
+
+
+.about-me, .languages {
+   font-family: 'Ubuntu', sans-serif;
+   padding: 15rem;
+   font-size: 1.5rem;
+}
+
+.about-me{
+   padding-bottom: 4rem;
+}
+
+.languages{
+   padding-top: 4rem;
+}
+
+.languages-content{
+   width: 100%;
+   display: flex;
+   justify-content: center;
+}
+
+.sub-languages{
+   width: 45%;
+}
+
+.pad-l2 {
+   padding-left: 2rem;
+}
+
+.pad-up-down-15 {
+   padding-top: 1.5rem;
+   padding-bottom: 1.5rem;
+}
+
+.white-text {
+   color : #ddd;
+}
+
+.wd-ht-60 {
+   width: 13%;
+   height: 13%;
+}
