--- a/index.css
+++ b/index.css
@@ -67,7 +67,21 @@ a {
    font-size: 1.5rem;
    color: #fff;
 }
-
+.title-github{
+   /* change the color of the svg file to #ddd */
+   filter : invert(1);
+   -webkit-filter : invert(1);
+   /* put it in the top left corner*/
+   position: fixed;
+   top: 0;
+   left: 0;
+   /* make it a little bit smaller */
+   width: 5%;
+   height: 5%;
+   /* add some padding */
+   padding: 0.5rem;
+   z-index: 1;
+}
 
 .about-me, .languages {
    font-family: 'Ubuntu', sans-serif;
