--- a/index.css
+++ b/index.css
@@ -48,54 +48,33 @@ a {
 
 
 .title {
-   width:100%;
-   min-height: 80vh;
-   aspect-ratio: 2/1;
-   background: #000;
-   position: relative;
-   border-radius: 0 0 5px 5px;
-   -webkit-border-radius: 0 0 5px 5px;
-   -moz-border-radius: 0 0 5px 5px;
-   -ms-border-radius: 0 0 5px 5px;
-   -o-border-radius: 0 0 5px 5px;
-}
-.title-background {
+   margin-top: 2rem;
    width: 100%;
-   height: 100%;
-   object-fit: cover;
-   filter: blur(7px) brightness(30%);
-   -webkit-filter: blur(7px) brightness(30%);
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+
 }
-.title-content{
-   font-family: 'Archivo Black', sans-serif;
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%);
-   text-align: center;
+
+.title img {
+   border-radius: 50%;
+   -webkit-border-radius: 50%;
+   -moz-border-radius: 50%;
+   -ms-border-radius: 50%;
+   -o-border-radius: 50%;
 }
-.title-content h1{  
-   font-size: 2.5rem;
-   color: #fff;
+
+.title-in {
+   width: 20%;
+   display: flex;
+   justify-content: space-between;
 }
-.title-content p{
-   font-size: 1.5rem;
-   color: #fff;
-}
-.title-github{
-   /* change the color of the svg file to #ddd */
-   filter : invert(1);
-   -webkit-filter : invert(1);
-   /* put it in the top left corner*/
-   position: fixed;
-   top: 0;
-   left: 0;
-   /* make it a little bit smaller */
-   width: 5%;
-   height: 5%;
-   /* add some padding */
-   padding: 0.5rem;
-   z-index: 1;
+
+.title-content {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
 }
 
 .content {
@@ -119,6 +98,9 @@ a {
    background: var(--bg-color-orange);
 }
 
+.padt0 {
+   padding-top: 0;
+}
 
 .languages, .projects{
    padding-top: 4rem;
