modified:   index.css modified:   index.html

--- a/index.css
+++ b/index.css
@@ -41,8 +41,19 @@ header {
    box-shadow: 5px 5px 4px 0px #000;
 }
 
+footer {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   width: 50%;
+   justify-content:center;
+   height: 10vh;
+   margin-left: auto;
+   margin-right: auto;
+}
+
 section {
-   height: 100vh;
+   min-height: 150vh;
    background-color: var(--bg-color2-dark);
 }
 
