--- a/index.css
+++ b/index.css
@@ -124,6 +124,12 @@ article {
    margin-left : 2rem;
 }
 
+@media screen and (max-width: 1440px) {
+   .mt2 {
+      margin-left: 2rem;
+   }
+}
+
 @media screen and (max-width: 1080px) {
    header {
       flex-direction: column;
@@ -135,9 +141,13 @@ article {
    }
    footer {
       width: 100%;
+      height: 20vh;
+   }
+   footer div {
+      width: 80%;
    }
    section {
-      min-height: 200vh;
+      min-height: 230vh;
    }
    .sub-section {
       width: 90%;
