--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@ body {
    background-color: var(--bg-color1-dark);
 }
 
-header {
+.header {
    display: flex;
    flex-direction: row;
    align-items: center;
@@ -29,6 +29,15 @@ header {
    height: 100vh;
    margin-left: auto;
    margin-right: auto;
+}
+
+header {
+   width: 100%;
+   height: 100vh;
+   background-image: url(docs/hd.svg);
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-position: center;
 }
 
 .round {
