--- a/index.css
+++ b/index.css
@@ -34,10 +34,21 @@ body {
 header {
    width: 100%;
    height: 100vh;
-   background-image: url(docs/hd.svg);
+   /* background-image: url(docs/hd.svg);
    background-repeat: no-repeat;
    background-size: cover;
-   background-position: center;
+   background-position: center; */
+}
+
+section a {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+}
+
+a svg {
+   margin-left: 0.5rem;
+   margin-top: 1rem;
 }
 
 .round {
