--- a/index.css
+++ b/index.css
@@ -83,8 +83,8 @@ footer {
 }
 
 section {
-   min-height: 130vh;
    background-color: var(--bg-color2-dark);
+   padding-bottom: 5rem;
 }
 
 .sub-section {
@@ -120,10 +120,6 @@ h3 {
    color: var(--title-color-dark);
 }
 
-ul {
-   margin-left: 2rem;
-}
-
 li {
    margin-top: 1.2rem;
    list-style-type: none;
@@ -133,10 +129,6 @@ li {
 
 li h3 {
    margin-top: 0;
-}
-
-.comps {
-   margin-left: 1rem;
 }
 
 h3::before {
@@ -195,17 +187,6 @@ li {
    margin-top: 1rem;
 }
 
-
-
-/* ul {
-   margin-left: 2rem;
-} */
-
-/* .comps {
-   margin-left: 1.5rem;
-
-} */
-
 .comps li {
    font-family: var(--font-1);
    font-size: 1.2rem;
@@ -225,6 +206,7 @@ li {
 
 .links a {
    text-decoration: underline;
+   color: var(--color3);
 }
 
 .links a:hover {
