modified:   docs/cv_light.pdf 	modified:   index.css 	modified:   index.html

--- a/index.css
+++ b/index.css
@@ -9,10 +9,10 @@
    --title-color-dark: #FFFFFF;
    --text-color1-dark: #E45B9F;
    /* --text-color1-dark: rgb(74, 239, 152); */
-   --text-color2-dark: #5C5F77;
+   --text-color2-dark: #6d7088;
    --text-color3-dark: #4aef98;
    --bg-color1-dark: #222222;
-   --bg-color2-dark: #333333;
+   --bg-color2-dark: #272727;
 
    --font-1 : 'Share Tech Mono', monospace;
    --font-2 : 'JetBrains Mono', monospace;
@@ -43,9 +43,18 @@ body {
    align-items: center;
 }
 
+.flex-col-center {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+}
+
+.li-component {
+   margin-top: 0.5rem;
+}
+
 .header {
    width: 50%;
-   justify-content:space-evenly;
    height: 100vh;
    margin-left: auto;
    margin-right: auto;
@@ -97,13 +106,13 @@ section {
 
 h1 {
    font-family: var(--font-4);
-   font-size: 2.625rem;
+   font-size: 3.75rem;
    color: var(--title-color-dark);
 }
 
 h2 {
    font-family: var(--font-4);
-   font-size: 1.875rem;
+   font-size: 2.25rem;
    margin-top: 3rem;
    margin-top: 3rem;
    color: var(--title-color-dark);
