--- a/index.css
+++ b/index.css
@@ -104,6 +104,10 @@ section {
    margin-right: auto;
 }
 
+#mg1 {
+   margin-top: 1.5rem;
+}
+
 h1 {
    font-family: var(--font-4);
    font-size: 3.75rem;
@@ -111,8 +115,8 @@ h1 {
 }
 
 h2 {
-   font-family: var(--font-4);
-   font-size: 2.25rem;
+   font-family: var(--font-2);
+   font-size: 1.675rem;
    margin-top: 3rem;
    margin-top: 3rem;
    color: var(--title-color-dark);
