--- a/index.css
+++ b/index.css
@@ -103,7 +103,6 @@ h2 {
    font-family: var(--font-2);
    font-size: 1.675rem;
    margin-top: 3rem;
-   margin-top: 3rem;
    color: var(--title-color-dark);
 }
 
@@ -113,7 +112,7 @@ li h3 {
 
 h3 {
    font-family: var(--font-1);
-   font-size: 1.5rem;
+   font-size: 1.55rem;
    margin-top: 1.5rem;
    color: var(--title-color-dark);
 }
@@ -130,9 +129,8 @@ li h3 {
 }
 
 /* put a link icon after the h3 */
-.link::after {
+.link::before {
    content: url(docs/link.svg);
-   margin-left: 0.5rem;
    display: inline-block;
    vertical-align: middle;
 }
