--- a/index.css
+++ b/index.css
@@ -36,6 +36,8 @@ body {
 
 .li-component {
    margin-top: 0.5rem;
+   font-family: var(--font-6)!important;
+   font-size: 1.3rem!important;
 }
 
 .header {
@@ -63,6 +65,13 @@ a svg, a img {
    -o-border-radius: 50%;
    border: solid 2px #000;
    box-shadow: 5px 5px 4px 0px #000;
+}
+
+span {
+   vertical-align: middle;
+   font-family: var(--font-6);
+   margin-left: 0.5rem;
+   font-size: 1.3rem;
 }
 
 footer {
