--- a/vars.css
+++ b/vars.css
@@ -11,4 +11,14 @@
   --font-3 : 'Inter', sans-serif;
   --font-4 : 'Epilogue', sans-serif;
   --font-5 : 'Poppins', sans-serif;
+  --font-6 : 'Consolas', monospace;
+}
+
+@font-face {
+  font-family: 'Consolas';
+  src: url('docs/Consolas.woff') format('woff'),
+      url('docs/Consolas.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
