--- a/vars.css
+++ b/vars.css
@@ -5,7 +5,7 @@
   --text-color3-dark: #4aef98;
 
   --highlight-color: #7e57c2;
-  --highlight-rust-color: #f44a00;
+  --highlight-rust-color: #c43f06;
   --highlight-python-color: #3776AB;
 
   --bg-color1-dark: #222222;
