--- a/vars.css
+++ b/vars.css
@@ -11,6 +11,8 @@
   --bg-color1-dark: #222222;
   --bg-color2-dark: #272727;
 
+  --ctp-mocha-flamingo: #f2cdcd;
+
   --font-1 : 'Share Tech Mono', monospace;
   --font-2 : 'JetBrains Mono', monospace;
   --font-3 : 'Inter', sans-serif;
